--- a/config-builder/documentation/devices/s1-p02.md
+++ b/config-builder/documentation/devices/s1-p02.md
@@ -18,6 +18,8 @@
   - [Service Routing Protocols Model](#service-routing-protocols-model)
   - [IP Routing](#ip-routing)
   - [IPv6 Routing](#ipv6-routing)
+  - [Static Routes](#static-routes)
+  - [Router Traffic-Engineering](#router-traffic-engineering)
   - [Router ISIS](#router-isis)
 - [MPLS](#mpls)
   - [MPLS and LDP](#mpls-and-ldp)
@@ -359,6 +361,38 @@ ip routing
 | default | False |
 | default | false |
 
+### Static Routes
+
+#### Static Routes Summary
+
+| VRF | Destination Prefix | Next Hop IP             | Exit interface      | Administrative Distance       | Tag               | Route Name                    | Metric         |
+| --- | ------------------ | ----------------------- | ------------------- | ----------------------------- | ----------------- | ----------------------------- | -------------- |
+| default | 0.0.0.0/0 | 192.168.2.1 | - | 1 | - | - | - |
+
+#### Static Routes Device Configuration
+
+```eos
+!
+ip route 0.0.0.0/0 192.168.2.1
+```
+
+### Router Traffic-Engineering
+
+#### Segment Routing Summary
+
+- SRTE is enabled.
+
+- system-colored-tunnel-rib is enabled
+
+#### Router Traffic Engineering Device Configuration
+
+```eos
+!
+router traffic-engineering
+   segment-routing
+      rib system-colored-tunnel-rib
+```
+
 ### Router ISIS
 
 #### Router ISIS Summary
@@ -391,11 +425,32 @@ ip routing
 | -------- | ---------- | ---------- |
 | Loopback0 | 112 | - |
 
+#### Prefix Segments
+
+| Prefix Segment | Index |
+| -------------- | ----- |
+| 10.0.0.0/31 | 50000 |
+| 10.0.0.2/31 | 50002 |
+| 10.0.0.4/31 | 50004 |
+| 10.0.0.6/31 | 50006 |
+| 10.0.0.8/31 | 50008 |
+| 10.0.1.0/31 | 50010 |
+| 10.0.1.2/31 | 50012 |
+| 10.0.1.4/31 | 50014 |
+| 10.0.1.6/31 | 50016 |
+| 10.0.1.8/31 | 50018 |
+| 10.0.1.10/31 | 50100 |
+| 10.0.1.12/31 | 50112 |
+| 10.0.1.14/31 | 50114 |
+| 10.0.2.0/31 | 50020 |
+| 10.0.2.2/31 | 50022 |
+
 #### ISIS IPv4 Address Family Summary
 
 | Settings | Value |
 | -------- | ----- |
 | IPv4 Address-family Enabled | True |
+| TI-LFA Mode | link-protection |
 
 #### Router ISIS Device Configuration
 
@@ -409,9 +464,25 @@ router isis CORE-ISIS
    advertise passive-only
    !
    address-family ipv4 unicast
+      fast-reroute ti-lfa mode link-protection
    !
    segment-routing mpls
       no shutdown
+      prefix-segment 10.0.0.0/31 index 50000
+      prefix-segment 10.0.0.2/31 index 50002
+      prefix-segment 10.0.0.4/31 index 50004
+      prefix-segment 10.0.0.6/31 index 50006
+      prefix-segment 10.0.0.8/31 index 50008
+      prefix-segment 10.0.1.0/31 index 50010
+      prefix-segment 10.0.1.2/31 index 50012
+      prefix-segment 10.0.1.4/31 index 50014
+      prefix-segment 10.0.1.6/31 index 50016
+      prefix-segment 10.0.1.8/31 index 50018
+      prefix-segment 10.0.1.10/31 index 50100
+      prefix-segment 10.0.1.12/31 index 50112
+      prefix-segment 10.0.1.14/31 index 50114
+      prefix-segment 10.0.2.0/31 index 50020
+      prefix-segment 10.0.2.2/31 index 50022
 ```
 
 ## MPLS
