--- a/config-builder/documentation/devices/s1-pe04.md
+++ b/config-builder/documentation/devices/s1-pe04.md
@@ -24,10 +24,15 @@
   - [Virtual Router MAC Address](#virtual-router-mac-address)
   - [IP Routing](#ip-routing)
   - [IPv6 Routing](#ipv6-routing)
+  - [Static Routes](#static-routes)
+  - [Router Traffic-Engineering](#router-traffic-engineering)
   - [Router ISIS](#router-isis)
   - [Router BGP](#router-bgp)
 - [MPLS](#mpls)
   - [MPLS and LDP](#mpls-and-ldp)
+- [Filters](#filters)
+  - [Route-maps](#route-maps)
+  - [IP Extended Community Lists](#ip-extended-community-lists)
 - [VRF Instances](#vrf-instances)
   - [VRF Instances Summary](#vrf-instances-summary)
   - [VRF Instances Device Configuration](#vrf-instances-device-configuration)
@@ -208,6 +213,7 @@ aaa authorization exec default local
 | VLAN ID | Name | Trunk Groups |
 | ------- | ---- | ------------ |
 | 1810 | S1-FW-XCO | - |
+| 2001 | BKP-SITE01 | - |
 
 ### VLANs Device Configuration
 
@@ -215,6 +221,9 @@ aaa authorization exec default local
 !
 vlan 1810
    name S1-FW-XCO
+!
+vlan 2001
+   name BKP-SITE01
 ```
 
 ## Interfaces
@@ -329,14 +338,14 @@ interface Port-Channel4
 | Interface | Description | VRF | IP Address |
 | --------- | ----------- | --- | ---------- |
 | Loopback0 | Router ID | default | 1.0.0.14/32 |
-| Loopback1018 | Router ID | CLIENTS | 1.18.10.14/32 |
+| Loopback1018 | Router ID | FW-HA | 1.18.10.14/32 |
 
 ##### IPv6
 
 | Interface | Description | VRF | IPv6 Address |
 | --------- | ----------- | --- | ------------ |
 | Loopback0 | Router ID | default | - |
-| Loopback1018 | Router ID | CLIENTS | - |
+| Loopback1018 | Router ID | FW-HA | - |
 
 ##### ISIS
 
@@ -360,7 +369,7 @@ interface Loopback0
 interface Loopback1018
    description Router ID
    no shutdown
-   vrf CLIENTS
+   vrf FW-HA
    ip address 1.18.10.14/32
 ```
 
@@ -370,22 +379,22 @@ interface Loopback1018
 
 | Interface | Description | VRF |  MTU | Shutdown |
 | --------- | ----------- | --- | ---- | -------- |
-| Vlan1810 | vrf-clients-xco-firewall-site01 | CLIENTS | - | False |
+| Vlan1810 | vrf-FW-HA-xco-firewall-site01 | FW-HA | - | False |
 
 ##### IPv4
 
 | Interface | VRF | IP Address | IP Address Virtual | IP Router Virtual Address | VRRP | ACL In | ACL Out |
 | --------- | --- | ---------- | ------------------ | ------------------------- | ---- | ------ | ------- |
-| Vlan1810 |  CLIENTS  |  10.18.10.14/24  |  -  |  10.18.10.1  |  -  |  -  |  -  |
+| Vlan1810 |  FW-HA  |  10.18.10.14/24  |  -  |  10.18.10.1  |  -  |  -  |  -  |
 
 #### VLAN Interfaces Device Configuration
 
 ```eos
 !
 interface Vlan1810
-   description vrf-clients-xco-firewall-site01
+   description vrf-FW-HA-xco-firewall-site01
    no shutdown
-   vrf CLIENTS
+   vrf FW-HA
    ip address 10.18.10.14/24
    ip virtual-router address 10.18.10.1
 ```
@@ -421,14 +430,16 @@ ip virtual-router mac-address 00:1c:73:00:dc:01
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | True |
-| CLIENTS | True |
+| BKP | True |
+| FW-HA | True |
 
 #### IP Routing Device Configuration
 
 ```eos
 !
 ip routing
-ip routing vrf CLIENTS
+ip routing vrf BKP
+ip routing vrf FW-HA
 ```
 
 ### IPv6 Routing
@@ -438,7 +449,40 @@ ip routing vrf CLIENTS
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | False |
-| CLIENTS | false |
+| BKP | false |
+| FW-HA | false |
+
+### Static Routes
+
+#### Static Routes Summary
+
+| VRF | Destination Prefix | Next Hop IP             | Exit interface      | Administrative Distance       | Tag               | Route Name                    | Metric         |
+| --- | ------------------ | ----------------------- | ------------------- | ----------------------------- | ----------------- | ----------------------------- | -------------- |
+| default | 0.0.0.0/0 | 192.168.2.1 | - | 1 | - | - | - |
+
+#### Static Routes Device Configuration
+
+```eos
+!
+ip route 0.0.0.0/0 192.168.2.1
+```
+
+### Router Traffic-Engineering
+
+#### Segment Routing Summary
+
+- SRTE is enabled.
+
+- system-colored-tunnel-rib is enabled
+
+#### Router Traffic Engineering Device Configuration
+
+```eos
+!
+router traffic-engineering
+   segment-routing
+      rib system-colored-tunnel-rib
+```
 
 ### Router ISIS
 
@@ -468,11 +512,32 @@ ip routing vrf CLIENTS
 | -------- | ---------- | ---------- |
 | Loopback0 | 14 | - |
 
+#### Prefix Segments
+
+| Prefix Segment | Index |
+| -------------- | ----- |
+| 10.0.0.0/31 | 50000 |
+| 10.0.0.2/31 | 50002 |
+| 10.0.0.4/31 | 50004 |
+| 10.0.0.6/31 | 50006 |
+| 10.0.0.8/31 | 50008 |
+| 10.0.1.0/31 | 50010 |
+| 10.0.1.2/31 | 50012 |
+| 10.0.1.4/31 | 50014 |
+| 10.0.1.6/31 | 50016 |
+| 10.0.1.8/31 | 50018 |
+| 10.0.1.10/31 | 50100 |
+| 10.0.1.12/31 | 50112 |
+| 10.0.1.14/31 | 50114 |
+| 10.0.2.0/31 | 50020 |
+| 10.0.2.2/31 | 50022 |
+
 #### ISIS IPv4 Address Family Summary
 
 | Settings | Value |
 | -------- | ----- |
 | IPv4 Address-family Enabled | True |
+| TI-LFA Mode | link-protection |
 
 #### Router ISIS Device Configuration
 
@@ -486,9 +551,25 @@ router isis CORE-ISIS
    advertise passive-only
    !
    address-family ipv4 unicast
+      fast-reroute ti-lfa mode link-protection
    !
    segment-routing mpls
       no shutdown
+      prefix-segment 10.0.0.0/31 index 50000
+      prefix-segment 10.0.0.2/31 index 50002
+      prefix-segment 10.0.0.4/31 index 50004
+      prefix-segment 10.0.0.6/31 index 50006
+      prefix-segment 10.0.0.8/31 index 50008
+      prefix-segment 10.0.1.0/31 index 50010
+      prefix-segment 10.0.1.2/31 index 50012
+      prefix-segment 10.0.1.4/31 index 50014
+      prefix-segment 10.0.1.6/31 index 50016
+      prefix-segment 10.0.1.8/31 index 50018
+      prefix-segment 10.0.1.10/31 index 50100
+      prefix-segment 10.0.1.12/31 index 50112
+      prefix-segment 10.0.1.14/31 index 50114
+      prefix-segment 10.0.2.0/31 index 50020
+      prefix-segment 10.0.2.2/31 index 50022
 ```
 
 ### Router BGP
@@ -512,7 +593,7 @@ router isis CORE-ISIS
 | -------- | ----- |
 | Address Family | ipv4 |
 | Source | Loopback0 |
-| Send community | all |
+| Send community | standard extended |
 
 #### BGP Neighbors
 
@@ -545,7 +626,8 @@ router isis CORE-ISIS
 
 | VRF | Route-Distinguisher | Redistribute |
 | --- | ------------------- | ------------ |
-| CLIENTS | 1.0.0.14:1 | static<br>connected |
+| BKP | 1.0.0.14:2 | static<br>connected |
+| FW-HA | 1.0.0.14:1 | static<br>connected |
 
 #### Router BGP Device Configuration
 
@@ -557,7 +639,8 @@ router bgp 65000
    no bgp default ipv4-unicast
    neighbor EVPN-CORE peer group
    neighbor EVPN-CORE update-source Loopback0
-   neighbor EVPN-CORE send-community
+   neighbor EVPN-CORE send-community standard extended
+   neighbor EVPN-CORE route-map RM-SET-COLOR in
    neighbor 1.0.0.111 peer group EVPN-CORE
    neighbor 1.0.0.111 remote-as 65000
    neighbor 1.0.0.111 description s2-p01
@@ -576,7 +659,14 @@ router bgp 65000
       neighbor EVPN-CORE activate
       neighbor EVPN-CORE encapsulation mpls
    !
-   vrf CLIENTS
+   vrf BKP
+      rd 1.0.0.14:2
+      route-target import evpn 1:2
+      route-target export evpn 1:2
+      redistribute connected
+      redistribute static
+   !
+   vrf FW-HA
       rd 1.0.0.14:1
       route-target import evpn 1:1
       route-target export evpn 1:1
@@ -605,18 +695,66 @@ router bgp 65000
 mpls ip
 ```
 
+## Filters
+
+### Route-maps
+
+#### Route-maps Summary
+
+##### RM-SET-COLOR
+
+| Sequence | Type | Match | Set | Sub-Route-Map | Continue |
+| -------- | ---- | ----- | --- | ------------- | -------- |
+| 10 | permit | extcommunity EXTCOM-BKP | extcommunity color 300 additive | - | - |
+| 90 | permit | - | - | - | - |
+
+#### Route-maps Device Configuration
+
+```eos
+!
+route-map RM-SET-COLOR permit 10
+   description Add COLOR-02-BKP to BKP routes
+   match extcommunity EXTCOM-BKP
+   set extcommunity color 300 additive
+!
+route-map RM-SET-COLOR permit 90
+   description Default permit
+```
+
+### IP Extended Community Lists
+
+#### IP Extended Community Lists Summary
+
+| List Name | Type | Extended Communities |
+| --------- | ---- | -------------------- |
+| EXTCOM-BKP | permit | rt 1:2 |
+| EXTCOM-CLIENT | permit | rt 1:1 |
+
+#### IP Extended Community Lists configuration
+
+```eos
+!
+ip extcommunity-list EXTCOM-BKP permit rt 1:2
+!
+ip extcommunity-list EXTCOM-CLIENT permit rt 1:1
+```
+
 ## VRF Instances
 
 ### VRF Instances Summary
 
 | VRF Name | IP Routing |
 | -------- | ---------- |
-| CLIENTS | enabled |
+| BKP | enabled |
+| FW-HA | enabled |
 
 ### VRF Instances Device Configuration
 
 ```eos
 !
-vrf instance CLIENTS
-   description CLIENTS VRF
+vrf instance BKP
+   description BACKUP VRF
+!
+vrf instance FW-HA
+   description FW-HA VRF
 ```
