--- a/config-builder/documentation/devices/s1-ce01.md
+++ b/config-builder/documentation/devices/s1-ce01.md
@@ -203,6 +203,7 @@ aaa authorization exec default local
 | VLAN ID | Name | Trunk Groups |
 | ------- | ---- | ------------ |
 | 1810 | S1-FW-XCO | - |
+| 2001 | BKP-SITE01 | - |
 
 ### VLANs Device Configuration
 
@@ -210,6 +211,9 @@ aaa authorization exec default local
 !
 vlan 1810
    name S1-FW-XCO
+!
+vlan 2001
+   name BKP-SITE01
 ```
 
 ## Interfaces
@@ -222,8 +226,8 @@ vlan 1810
 
 | Interface | Description | Mode | VLANs | Native VLAN | Trunk Group | Channel-Group |
 | --------- | ----------- | ---- | ----- | ----------- | ----------- | ------------- |
-| Ethernet1 | - | *trunk | *1810 | *- | *- | 1 |
-| Ethernet2 | - | *trunk | *1810 | *- | *- | 1 |
+| Ethernet1 | - | *trunk | *1810, 2001 | *- | *- | 1 |
+| Ethernet2 | - | *trunk | *1810, 2001 | *- | *- | 1 |
 
 *Inherited from Port-Channel Interface
 
@@ -248,7 +252,7 @@ interface Ethernet2
 
 | Interface | Description | Type | Mode | VLANs | Native VLAN | Trunk Group | LACP Fallback Timeout | LACP Fallback Mode | MLAG ID | EVPN ESI |
 | --------- | ----------- | ---- | ---- | ----- | ----------- | ------------| --------------------- | ------------------ | ------- | -------- |
-| Port-Channel1 | to s1-pe01 - firewall test - vrrp | switched | trunk | 1810 | - | - | - | - | - | - |
+| Port-Channel1 | to s1-pe01 - firewall test - vrrp | switched | trunk | 1810, 2001 | - | - | - | - | - | - |
 
 #### Port-Channel Interfaces Device Configuration
 
@@ -257,7 +261,7 @@ interface Ethernet2
 interface Port-Channel1
    description to s1-pe01 - firewall test - vrrp
    switchport
-   switchport trunk allowed vlan 1810
+   switchport trunk allowed vlan 1810, 2001
    switchport mode trunk
 ```
 
@@ -267,13 +271,15 @@ interface Port-Channel1
 
 | Interface | Description | VRF |  MTU | Shutdown |
 | --------- | ----------- | --- | ---- | -------- |
-| Vlan1810 | vrf-clients-xco-firewall-site01 | CLIENTS | - | False |
+| Vlan1810 | vrf-FW-HA-xco-firewall-site01 | FW-HA | - | False |
+| Vlan2001 | vrf-bkp-xco-site01 | BKP | - | False |
 
 ##### IPv4
 
 | Interface | VRF | IP Address | IP Address Virtual | IP Router Virtual Address | VRRP | ACL In | ACL Out |
 | --------- | --- | ---------- | ------------------ | ------------------------- | ---- | ------ | ------- |
-| Vlan1810 |  CLIENTS  |  10.18.10.21/24  |  -  |  -  |  -  |  -  |  -  |
+| Vlan1810 |  FW-HA  |  10.18.10.211/24  |  -  |  -  |  -  |  -  |  -  |
+| Vlan2001 |  BKP  |  10.200.1.211/24  |  -  |  -  |  -  |  -  |  -  |
 
 ##### VRRP Details
 
@@ -286,13 +292,19 @@ interface Port-Channel1
 ```eos
 !
 interface Vlan1810
-   description vrf-clients-xco-firewall-site01
+   description vrf-FW-HA-xco-firewall-site01
    no shutdown
-   vrf CLIENTS
-   ip address 10.18.10.21/24
+   vrf FW-HA
+   ip address 10.18.10.211/24
    vrrp 10 priority-level 100
    vrrp 10 ipv4 10.18.10.254
    vrrp 10 ipv4 version 3
+!
+interface Vlan2001
+   description vrf-bkp-xco-site01
+   no shutdown
+   vrf BKP
+   ip address 10.200.1.211/24
 ```
 
 ## Routing
@@ -313,14 +325,16 @@ service routing protocols model multi-agent
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | True |
-| CLIENTS | True |
+| BKP | True |
+| FW-HA | True |
 
 #### IP Routing Device Configuration
 
 ```eos
 !
 ip routing
-ip routing vrf CLIENTS
+ip routing vrf BKP
+ip routing vrf FW-HA
 ```
 
 ### IPv6 Routing
@@ -330,7 +344,8 @@ ip routing vrf CLIENTS
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | False |
-| CLIENTS | false |
+| BKP | false |
+| FW-HA | false |
 
 ### Static Routes
 
@@ -338,13 +353,17 @@ ip routing vrf CLIENTS
 
 | VRF | Destination Prefix | Next Hop IP             | Exit interface      | Administrative Distance       | Tag               | Route Name                    | Metric         |
 | --- | ------------------ | ----------------------- | ------------------- | ----------------------------- | ----------------- | ----------------------------- | -------------- |
-| CLIENTS | 0.0.0.0/0 | 10.18.10.1 | - | 1 | - | - | - |
+| FW-HA | 0.0.0.0/0 | 10.18.10.1 | - | 1 | - | - | - |
+| BKP | 0.0.0.0/0 | 10.200.1.1 | - | 1 | - | - | - |
+| default | 0.0.0.0/0 | 192.168.2.1 | - | 1 | - | - | - |
 
 #### Static Routes Device Configuration
 
 ```eos
 !
-ip route vrf CLIENTS 0.0.0.0/0 10.18.10.1
+ip route vrf FW-HA 0.0.0.0/0 10.18.10.1
+ip route vrf BKP 0.0.0.0/0 10.200.1.1
+ip route 0.0.0.0/0 192.168.2.1
 ```
 
 ## VRF Instances
@@ -353,12 +372,16 @@ ip route vrf CLIENTS 0.0.0.0/0 10.18.10.1
 
 | VRF Name | IP Routing |
 | -------- | ---------- |
-| CLIENTS | enabled |
+| BKP | enabled |
+| FW-HA | enabled |
 
 ### VRF Instances Device Configuration
 
 ```eos
 !
-vrf instance CLIENTS
-   description CLIENTS VRF
+vrf instance BKP
+   description BACKUP VRF
+!
+vrf instance FW-HA
+   description FW-HA VRF
 ```
