--- a/config-builder/documentation/devices/s2-ce01.md
+++ b/config-builder/documentation/devices/s2-ce01.md
@@ -11,10 +11,17 @@
 - [Authentication](#authentication)
   - [Local Users](#local-users)
   - [AAA Authorization](#aaa-authorization)
+- [VLANs](#vlans)
+  - [VLANs Summary](#vlans-summary)
+  - [VLANs Device Configuration](#vlans-device-configuration)
+- [Interfaces](#interfaces)
+  - [Ethernet Interfaces](#ethernet-interfaces)
+  - [VLAN Interfaces](#vlan-interfaces)
 - [Routing](#routing)
   - [Service Routing Protocols Model](#service-routing-protocols-model)
   - [IP Routing](#ip-routing)
   - [IPv6 Routing](#ipv6-routing)
+  - [Static Routes](#static-routes)
 - [VRF Instances](#vrf-instances)
   - [VRF Instances Summary](#vrf-instances-summary)
   - [VRF Instances Device Configuration](#vrf-instances-device-configuration)
@@ -188,6 +195,84 @@ aaa authorization exec default local
 !
 ```
 
+## VLANs
+
+### VLANs Summary
+
+| VLAN ID | Name | Trunk Groups |
+| ------- | ---- | ------------ |
+| 1811 | S2-REMOTE-END-XCO | - |
+| 2002 | BKP-SITE02 | - |
+
+### VLANs Device Configuration
+
+```eos
+!
+vlan 1811
+   name S2-REMOTE-END-XCO
+!
+vlan 2002
+   name BKP-SITE02
+```
+
+## Interfaces
+
+### Ethernet Interfaces
+
+#### Ethernet Interfaces Summary
+
+##### L2
+
+| Interface | Description | Mode | VLANs | Native VLAN | Trunk Group | Channel-Group |
+| --------- | ----------- | ---- | ----- | ----------- | ----------- | ------------- |
+| Ethernet1 |  to s2-pe01 - CLIENT use-case - Remote end | trunk | 1811, 2002 | - | - | - |
+
+*Inherited from Port-Channel Interface
+
+#### Ethernet Interfaces Device Configuration
+
+```eos
+!
+interface Ethernet1
+   description to s2-pe01 - CLIENT use-case - Remote end
+   switchport trunk allowed vlan 1811, 2002
+   switchport mode trunk
+   switchport
+```
+
+### VLAN Interfaces
+
+#### VLAN Interfaces Summary
+
+| Interface | Description | VRF |  MTU | Shutdown |
+| --------- | ----------- | --- | ---- | -------- |
+| Vlan1811 | vrf-FW-HA-xco-firewall-site01 | FW-HA | - | False |
+| Vlan2002 | vrf-bkp-xco-site02 | BKP | - | False |
+
+##### IPv4
+
+| Interface | VRF | IP Address | IP Address Virtual | IP Router Virtual Address | VRRP | ACL In | ACL Out |
+| --------- | --- | ---------- | ------------------ | ------------------------- | ---- | ------ | ------- |
+| Vlan1811 |  FW-HA  |  10.18.11.221/24  |  -  |  -  |  -  |  -  |  -  |
+| Vlan2002 |  BKP  |  10.200.2.221/24  |  -  |  -  |  -  |  -  |  -  |
+
+#### VLAN Interfaces Device Configuration
+
+```eos
+!
+interface Vlan1811
+   description vrf-FW-HA-xco-firewall-site01
+   no shutdown
+   vrf FW-HA
+   ip address 10.18.11.221/24
+!
+interface Vlan2002
+   description vrf-bkp-xco-site02
+   no shutdown
+   vrf BKP
+   ip address 10.200.2.221/24
+```
+
 ## Routing
 
 ### Service Routing Protocols Model
@@ -206,12 +291,16 @@ service routing protocols model multi-agent
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | True |
+| BKP | True |
+| FW-HA | True |
 
 #### IP Routing Device Configuration
 
 ```eos
 !
 ip routing
+ip routing vrf BKP
+ip routing vrf FW-HA
 ```
 
 ### IPv6 Routing
@@ -221,7 +310,27 @@ ip routing
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | False |
-| default | false |
+| BKP | false |
+| FW-HA | false |
+
+### Static Routes
+
+#### Static Routes Summary
+
+| VRF | Destination Prefix | Next Hop IP             | Exit interface      | Administrative Distance       | Tag               | Route Name                    | Metric         |
+| --- | ------------------ | ----------------------- | ------------------- | ----------------------------- | ----------------- | ----------------------------- | -------------- |
+| FW-HA | 0.0.0.0/0 | 10.18.11.1 | - | 1 | - | - | - |
+| BKP | 0.0.0.0/0 | 10.200.2.1 | - | 1 | - | - | - |
+| default | 0.0.0.0/0 | 192.168.2.1 | - | 1 | - | - | - |
+
+#### Static Routes Device Configuration
+
+```eos
+!
+ip route vrf FW-HA 0.0.0.0/0 10.18.11.1
+ip route vrf BKP 0.0.0.0/0 10.200.2.1
+ip route 0.0.0.0/0 192.168.2.1
+```
 
 ## VRF Instances
 
@@ -229,8 +338,16 @@ ip routing
 
 | VRF Name | IP Routing |
 | -------- | ---------- |
+| BKP | enabled |
+| FW-HA | enabled |
 
 ### VRF Instances Device Configuration
 
 ```eos
+!
+vrf instance BKP
+   description BACKUP VRF
+!
+vrf instance FW-HA
+   description FW-HA VRF
 ```
