--- a/config-builder/documentation/devices/s2-pe01.md
+++ b/config-builder/documentation/devices/s2-pe01.md
@@ -11,9 +11,6 @@
 - [Authentication](#authentication)
   - [Local Users](#local-users)
   - [AAA Authorization](#aaa-authorization)
-- [VLANs](#vlans)
-  - [VLANs Summary](#vlans-summary)
-  - [VLANs Device Configuration](#vlans-device-configuration)
 - [Interfaces](#interfaces)
   - [Ethernet Interfaces](#ethernet-interfaces)
   - [Loopback Interfaces](#loopback-interfaces)
@@ -22,10 +19,15 @@
   - [Virtual Router MAC Address](#virtual-router-mac-address)
   - [IP Routing](#ip-routing)
   - [IPv6 Routing](#ipv6-routing)
+  - [Static Routes](#static-routes)
+  - [Router Traffic-Engineering](#router-traffic-engineering)
   - [Router ISIS](#router-isis)
   - [Router BGP](#router-bgp)
 - [MPLS](#mpls)
   - [MPLS and LDP](#mpls-and-ldp)
+- [Filters](#filters)
+  - [Route-maps](#route-maps)
+  - [IP Extended Community Lists](#ip-extended-community-lists)
 - [VRF Instances](#vrf-instances)
   - [VRF Instances Summary](#vrf-instances-summary)
   - [VRF Instances Device Configuration](#vrf-instances-device-configuration)
@@ -199,22 +201,6 @@ aaa authorization exec default local
 !
 ```
 
-## VLANs
-
-### VLANs Summary
-
-| VLAN ID | Name | Trunk Groups |
-| ------- | ---- | ------------ |
-| 1810 | S1-FW-XCO | - |
-
-### VLANs Device Configuration
-
-```eos
-!
-vlan 1810
-   name S1-FW-XCO
-```
-
 ## Interfaces
 
 ### Ethernet Interfaces
@@ -225,6 +211,7 @@ vlan 1810
 
 | Interface | Description | Mode | VLANs | Native VLAN | Trunk Group | Channel-Group |
 | --------- | ----------- | ---- | ----- | ----------- | ----------- | ------------- |
+| Ethernet4 |  to s2-ce01 - CLIENT use-case - Remote end | trunk | 1811,2002 | - | - | - |
 
 *Inherited from Port-Channel Interface
 
@@ -263,6 +250,13 @@ interface Ethernet2
    ip address 10.0.2.2/31
    isis enable CORE-ISIS
    isis network point-to-point
+!
+interface Ethernet4
+   description to s2-ce01 - CLIENT use-case - Remote end
+   no shutdown
+   switchport trunk allowed vlan 1811,2002
+   switchport mode trunk
+   switchport
 ```
 
 ### Loopback Interfaces
@@ -332,14 +326,16 @@ ip virtual-router mac-address 00:1c:73:00:dc:01
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | True |
-| CLIENTS | True |
+| BKP | True |
+| FW-HA | True |
 
 #### IP Routing Device Configuration
 
 ```eos
 !
 ip routing
-ip routing vrf CLIENTS
+ip routing vrf BKP
+ip routing vrf FW-HA
 ```
 
 ### IPv6 Routing
@@ -349,7 +345,40 @@ ip routing vrf CLIENTS
 | VRF | Routing Enabled |
 | --- | --------------- |
 | default | False |
-| CLIENTS | false |
+| BKP | false |
+| FW-HA | false |
+
+### Static Routes
+
+#### Static Routes Summary
+
+| VRF | Destination Prefix | Next Hop IP             | Exit interface      | Administrative Distance       | Tag               | Route Name                    | Metric         |
+| --- | ------------------ | ----------------------- | ------------------- | ----------------------------- | ----------------- | ----------------------------- | -------------- |
+| default | 0.0.0.0/0 | 192.168.2.1 | - | 1 | - | - | - |
+
+#### Static Routes Device Configuration
+
+```eos
+!
+ip route 0.0.0.0/0 192.168.2.1
+```
+
+### Router Traffic-Engineering
+
+#### Segment Routing Summary
+
+- SRTE is enabled.
+
+- system-colored-tunnel-rib is enabled
+
+#### Router Traffic Engineering Device Configuration
+
+```eos
+!
+router traffic-engineering
+   segment-routing
+      rib system-colored-tunnel-rib
+```
 
 ### Router ISIS
 
@@ -379,11 +408,32 @@ ip routing vrf CLIENTS
 | -------- | ---------- | ---------- |
 | Loopback0 | 21 | - |
 
+#### Prefix Segments
+
+| Prefix Segment | Index |
+| -------------- | ----- |
+| 10.0.0.0/31 | 50000 |
+| 10.0.0.2/31 | 50002 |
+| 10.0.0.4/31 | 50004 |
+| 10.0.0.6/31 | 50006 |
+| 10.0.0.8/31 | 50008 |
+| 10.0.1.0/31 | 50010 |
+| 10.0.1.2/31 | 50012 |
+| 10.0.1.4/31 | 50014 |
+| 10.0.1.6/31 | 50016 |
+| 10.0.1.8/31 | 50018 |
+| 10.0.1.10/31 | 50100 |
+| 10.0.1.12/31 | 50112 |
+| 10.0.1.14/31 | 50114 |
+| 10.0.2.0/31 | 50020 |
+| 10.0.2.2/31 | 50022 |
+
 #### ISIS IPv4 Address Family Summary
 
 | Settings | Value |
 | -------- | ----- |
 | IPv4 Address-family Enabled | True |
+| TI-LFA Mode | link-protection |
 
 #### Router ISIS Device Configuration
 
@@ -397,9 +447,25 @@ router isis CORE-ISIS
    advertise passive-only
    !
    address-family ipv4 unicast
+      fast-reroute ti-lfa mode link-protection
    !
    segment-routing mpls
       no shutdown
+      prefix-segment 10.0.0.0/31 index 50000
+      prefix-segment 10.0.0.2/31 index 50002
+      prefix-segment 10.0.0.4/31 index 50004
+      prefix-segment 10.0.0.6/31 index 50006
+      prefix-segment 10.0.0.8/31 index 50008
+      prefix-segment 10.0.1.0/31 index 50010
+      prefix-segment 10.0.1.2/31 index 50012
+      prefix-segment 10.0.1.4/31 index 50014
+      prefix-segment 10.0.1.6/31 index 50016
+      prefix-segment 10.0.1.8/31 index 50018
+      prefix-segment 10.0.1.10/31 index 50100
+      prefix-segment 10.0.1.12/31 index 50112
+      prefix-segment 10.0.1.14/31 index 50114
+      prefix-segment 10.0.2.0/31 index 50020
+      prefix-segment 10.0.2.2/31 index 50022
 ```
 
 ### Router BGP
@@ -423,7 +489,7 @@ router isis CORE-ISIS
 | -------- | ----- |
 | Address Family | ipv4 |
 | Source | Loopback0 |
-| Send community | all |
+| Send community | standard extended |
 
 #### BGP Neighbors
 
@@ -456,7 +522,8 @@ router isis CORE-ISIS
 
 | VRF | Route-Distinguisher | Redistribute |
 | --- | ------------------- | ------------ |
-| CLIENTS | 1.0.0.21:1 | static<br>connected |
+| BKP | 1.0.0.21:2 | static<br>connected |
+| FW-HA | 1.0.0.21:1 | static<br>connected |
 
 #### Router BGP Device Configuration
 
@@ -468,7 +535,8 @@ router bgp 65000
    no bgp default ipv4-unicast
    neighbor EVPN-CORE peer group
    neighbor EVPN-CORE update-source Loopback0
-   neighbor EVPN-CORE send-community
+   neighbor EVPN-CORE send-community standard extended
+   neighbor EVPN-CORE route-map RM-SET-COLOR in
    neighbor 1.0.0.111 peer group EVPN-CORE
    neighbor 1.0.0.111 remote-as 65000
    neighbor 1.0.0.111 description s2-p01
@@ -487,7 +555,14 @@ router bgp 65000
       neighbor EVPN-CORE activate
       neighbor EVPN-CORE encapsulation mpls
    !
-   vrf CLIENTS
+   vrf BKP
+      rd 1.0.0.21:2
+      route-target import evpn 1:2
+      route-target export evpn 1:2
+      redistribute connected
+      redistribute static
+   !
+   vrf FW-HA
       rd 1.0.0.21:1
       route-target import evpn 1:1
       route-target export evpn 1:1
@@ -516,18 +591,66 @@ router bgp 65000
 mpls ip
 ```
 
+## Filters
+
+### Route-maps
+
+#### Route-maps Summary
+
+##### RM-SET-COLOR
+
+| Sequence | Type | Match | Set | Sub-Route-Map | Continue |
+| -------- | ---- | ----- | --- | ------------- | -------- |
+| 10 | permit | extcommunity EXTCOM-BKP | extcommunity color 300 additive | - | - |
+| 90 | permit | - | - | - | - |
+
+#### Route-maps Device Configuration
+
+```eos
+!
+route-map RM-SET-COLOR permit 10
+   description Add COLOR-02-BKP to BKP routes
+   match extcommunity EXTCOM-BKP
+   set extcommunity color 300 additive
+!
+route-map RM-SET-COLOR permit 90
+   description Default permit
+```
+
+### IP Extended Community Lists
+
+#### IP Extended Community Lists Summary
+
+| List Name | Type | Extended Communities |
+| --------- | ---- | -------------------- |
+| EXTCOM-BKP | permit | rt 1:2 |
+| EXTCOM-CLIENT | permit | rt 1:1 |
+
+#### IP Extended Community Lists configuration
+
+```eos
+!
+ip extcommunity-list EXTCOM-BKP permit rt 1:2
+!
+ip extcommunity-list EXTCOM-CLIENT permit rt 1:1
+```
+
 ## VRF Instances
 
 ### VRF Instances Summary
 
 | VRF Name | IP Routing |
 | -------- | ---------- |
-| CLIENTS | enabled |
+| BKP | enabled |
+| FW-HA | enabled |
 
 ### VRF Instances Device Configuration
 
 ```eos
 !
-vrf instance CLIENTS
-   description CLIENTS VRF
+vrf instance BKP
+   description BACKUP VRF
+!
+vrf instance FW-HA
+   description FW-HA VRF
 ```
